# esirc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: connect.h  main.h  protocol.h
src/: CMakeLists.txt  connect.cpp  main.cpp  protocol.cpp
